--- a/templates/create.html
+++ b/templates/create.html
@@ -4,16 +4,17 @@
 
 {% block content %}
 
-<form method="POST" action="/create">
+<form method="post" action="/create/">
+    {% csrf_token %}
     <div class="form-group">
       <h1>Create your new task here</h1>
       <label for="title">Todo List Title</label>
-      <input type="text" class="form-control" id="text" placeholder="Enter title">
+      <input type="text" class="form-control" id="text" placeholder="Enter title" name="title">
       <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
     </div>
     <div class="form-group">
-      <label for="desc">To Do Description</label>
-      <input type="text" class="form-control" id="desc" placeholder="Description">
+      <label for="desc">Todo Description</label>
+      <input type="text" class="form-control" id="desc" placeholder="Description" name="desc">
     </div>
     <!-- <div class="form-check">
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
